--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 .holder {
     display: grid;
-    grid-template-columns: repeat(2, 50px);
-    grid-template-rows: repeat(2,50px);
+    grid-template-columns: repeat(2, 100px);
+    grid-template-rows: repeat(2,100px);
+    border: 1px solid black;
+    width: 200px;
 }
