--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 .holder {
     display: grid;
-    grid-template-columns: repeat(2, 100px);
-    grid-template-rows: repeat(2,100px);
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2,auto);
     border: 1px solid black;
     width: 200px;
-	height:200px;
+    height: 200px;
 }
