--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .holder {
     display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(2,auto);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     border: 1px solid black;
     width: 200px;
     height: 200px;
